--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
 a{
     color: inherit;
     text-decoration: none;
@@ -5,12 +10,19 @@ a{
 ul{
     list-style-type: none;
 }
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 .header{
     background-color: #1F2937;
     display: flex;
     justify-content: space-evenly;
     padding: 0px;
-    flex-wrap: wrap;
+    padding-bottom: 45px;
 }
 .header .leftLink{
     font-size: 24px;
@@ -22,4 +34,48 @@ ul{
     display: flex;
     gap: 16px;
     align-items: center;
+}
+.top1{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin: 0;
+    margin-bottom: 80px;
+    background-color: #1F2937;
+    padding-bottom: 66px;
+
+}
+.top2{
+    width: 370px;
+}
+.awesome{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+    margin: 0;
+    padding: 0;
+}
+.awesome2{
+    color: #F9FAF8;
+}
+.button {
+    background-color: #3882f6;
+    color: white;
+    width: 100px;
+    height: 30px;
+    border-radius: 10px;
+    border: none;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 5px;
+}
+.photoArea {
+    color: #F9FAF8;
+    background-color: #6d747d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: auto;
 }
