--- a/style.css
+++ b/style.css
@@ -131,3 +131,37 @@ ul{
     font-size: 24px;
     margin-left: 450px;
 }
+.call-area{
+    margin: 80px 0px;
+    width: 900px;
+    height: 150px;
+    border-radius: 9px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.call{
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.call-head{
+    ont-weight: bold;
+    font-size: 25px;
+}
+.call-body{
+    font-size: 18px;
+}
+.call-button{
+    background-color: #3882f6;
+    color: white;
+    width: 120px;
+    height: 35px;    
+    border-radius: 10px;
+    border: 2px solid white;
+    font-weight: bold;
+    font-size: 15px;
+    align-self: center;
+}
