--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ ul{
     align-items: center;
 }
 .call-head{
-    ont-weight: bold;
+    font-weight: bold;
     font-size: 25px;
 }
 .call-body{
