--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body{
     flex-direction: column;
     margin: 0;
 }
+img{
+    height: 150px;
+    width: 142px;
+}
 a{
     color: inherit;
     text-decoration: none;
@@ -51,7 +55,7 @@ ul{
     padding: 0;
 }
 .awesome2{
-    color: #F9FAF8;
+    color: #6d747d;
 }
 .button {
     background-color: #3882f6;
@@ -93,6 +97,13 @@ ul{
     width: 142px;
     border: solid 4px #3882f6;
     border-radius: 10px;
+    background-color: black;
+}
+.img{
+    height: 150px;
+    width: 142px;
+    border-radius: 10px;
+
 }
 
 .text {
