--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ ul{
 }
 .areasPhoto:hover{
     transform: scale(1.1);
-    filter: brightness(100%)
+    filter: brightness(100%);
 }
 .information{
     text-align: center;
@@ -127,7 +127,7 @@ ul{
     height: 150px;
     width: 142px;
     border-radius: 10px;
-
+    object-fit: cover;
 }
 
 .text {
@@ -143,7 +143,6 @@ ul{
     width: 142px;
 }
 .word{
-    
         display: flex;
         flex-wrap: wrap;
         flex-direction: column;
@@ -171,8 +170,7 @@ ul{
     margin: 80px 0px;
     width: 900px;
     height: 150px;
-    border-radius: 9px;
-    background-color: #3882f6;
+    background-color: rgb(35, 57, 93);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -191,7 +189,7 @@ ul{
     font-size: 18px;
 }
 .call-button{
-    background-color: #3882f6;
+    background-color: #0b5bc3;
     color: white;
     width: 120px;
     height: 35px;    
@@ -200,6 +198,9 @@ ul{
     font-weight: bold;
     font-size: 15px;
     align-self: center;
+}
+.call-button:hover{
+    transform: scale(1.1);
 }
 .footer{
     height: 74px;
