--- a/style.css
+++ b/style.css
@@ -3,11 +3,7 @@ body{
     flex-direction: column;
     margin: 0;
 }
-.body{
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-}
+
 img{
     height: 150px;
     width: 142px;
@@ -44,7 +40,6 @@ ul{
 .logo{
     height: 30px;
     width: 27px;
-
 }
 .top1{
     display: flex;
@@ -106,6 +101,11 @@ ul{
 .areasPhoto:hover{
     transform: scale(1.1);
     filter: brightness(100%);
+}
+.CharacterAreasPhoto{
+    width: 400px;
+    border-radius: 10px;
+    height: auto;
 }
 .information{
     text-align: center;
