--- a/style.css
+++ b/style.css
@@ -221,3 +221,37 @@ ul{
     color: white;
     font-size: 18px;
 }
+
+.season{
+    font-size: 34px;
+    font-weight: 900;
+    color: #1F2937;
+    margin-left: 0;
+    margin-top: -30px;
+    margin-bottom: 80px;
+    display: flex;
+    gap: 16px;
+    background-color: #6d747d;
+    padding-top: 3px;
+    padding-bottom: 32px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.season1{
+    text-align: center;
+    background-color: #6d747d;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+}
+.seasonIn{
+    height: 200px;
+    width: 370px;
+}
+.seasonPhoto{
+    width: 370px;
+    height: 200px;
+
+}
