--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ ul{
     justify-content: space-evenly;
     gap: 400px;
 	position:fixed; top:0px; left:0px; right:0px; 
-    z-index: 1;
+    z-index: 2;
 }
 .header .leftLink{
     font-size: 24px;
@@ -95,8 +95,9 @@ ul{
     width: 400px;
     border-radius: 10px;
     height: auto;
+    border:2px solid #1F2937 ;
     transition: transform 0.3s;
-    filter: brightness(50%)
+    filter: brightness(70%)
 }
 .areasPhoto:hover{
     transform: scale(1.1);
@@ -231,7 +232,7 @@ ul{
     margin-bottom: 80px;
     display: flex;
     gap: 16px;
-    background-color: #6d747d;
+    background-color: #a4a9b0;
     padding-top: 3px;
     padding-bottom: 32px;
     flex-wrap: wrap;
@@ -239,7 +240,7 @@ ul{
 }
 .season1{
     text-align: center;
-    background-color: #6d747d;
+    background-color: #a4a9b0;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -253,5 +254,11 @@ ul{
 .seasonPhoto{
     width: 370px;
     height: 200px;
-
+    border-radius: 10px;
+    border:2px solid #1F2937 ;
+    transition: transform 0.3s;
 }
+.seasonPhoto:hover{
+    transform: scale(1.1);
+}
+
