--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ ul{
     font-weight: bold;
     font-size: 15px;
     margin-top: 5px;
+    cursor: pointer;
 }
 .button:hover{
     transform: scale(1.1);
@@ -208,6 +209,7 @@ ul{
     font-weight: bold;
     font-size: 15px;
     align-self: center;
+    cursor: pointer;
 }
 .call-button:hover{
     transform: scale(1.1);
